--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,13 @@ header {
   font-weight: bold;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 10px;
+  height: 80px;
+  width: 100%;
+  align-items: center;
   border-bottom: 1px solid black;
+  position: fixed;
+  z-index: 5;
+  background-color: white;
 }
 div.logo {
   display: flex;
@@ -27,3 +32,74 @@ nav span {
 nav a {
   color: black;
 }
+.content {
+  padding-top: 100px;
+  display: flex;
+  margin: 0 auto 78px auto;
+  width: 1232px;
+}
+.column {
+  dsplay: flex;
+  flex-direction: column;
+  margin-right: 30px;
+}
+#left {
+  width: 630px;
+}
+#center {
+  width: 300px;
+}
+#right {
+  width: 240px;
+}
+.story-content {
+  font-family: Georgia;
+  font-size: 17px;
+}
+.stories-other {
+  display: flex;
+  justify-content: space-between;
+}
+.story {
+  width: 280px;
+}
+.image-content {
+  display: flex;
+  font-family: Georgia;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  height: 300px;
+  flex-direction: column;
+  text-align: center;
+}
+#story-main {
+  font-size: 40px;
+  text-align: left;
+  background-image: url(../images/img-story-main.png);
+}
+.story-1 {
+  background-image: url(../images/img-story-1.png);
+}
+.story-2 {
+  background-image: url(../images/img-story-2.png);
+}
+.story-3 {
+  background-image: url(../images/img-story-3.png);
+}
+.side-column {
+  display: flex;
+  flex-direction: column;
+}
+.side-column span {
+  background-color: lightgray;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin: 0px;
+  padding: 10px;
+}
+/*
+div {
+  border: 1px solid black;
+}
+*/
