--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,12 +3,12 @@ header {
   font-size: 14px;
   font-weight: bold;
   display: flex;
+  position: fixed;
   justify-content: space-between;
   height: 80px;
   width: 100%;
   align-items: center;
   border-bottom: 1px solid black;
-  position: fixed;
   z-index: 5;
   background-color: white;
 }
@@ -92,11 +92,46 @@ nav a {
   flex-direction: column;
 }
 .side-column span {
-  background-color: lightgray;
-  border-top: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
   border-bottom: 1px solid black;
   margin: 0px;
   padding: 10px;
+}
+.side-column h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+footer {
+  width: 100%;
+  height: 300px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+#title {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 20px;
+  border-right: 3px solid white;
+  display: inline-block;
+}
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
+}
+.copyright {
+  text-align: center;
 }
 /*
 div {
